fixed goodbye plain noodles spacing, removed style

--- a/src/components/HomePage/HomeBody/home-body.scss
+++ b/src/components/HomePage/HomeBody/home-body.scss
@@ -10,5 +10,10 @@
 
   .meal-img {
     display: block;
+    margin-left: 4rem;
+  }
+
+  #goodbye-noodles {
+    text-align: left;
   }
 }
