--- a/src/index.scss
+++ b/src/index.scss
@@ -106,16 +106,6 @@ a {
   text-align: center;
 }
 
-.body-style-3 {
-  background-color: var(--light-cream);
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  text-align: center;
-}
-
 .title-text {
   padding-right: 8%;
   padding-left: 8%;
@@ -208,15 +198,11 @@ a {
   }
 
   .body-style-1,
-  .body-style-3 {
+  .body-style-2 {
     padding-right: 4rem;
     padding-left: 4rem;
   }
 
-  .body-style-2 {
-    text-align: left;
-    padding-right: 4rem;
-  }
   .title-text {
     padding-top: 2rem;
     padding-bottom: 2rem;
